# datalake-mcp-server-client

./: README.md  generate_spec_from_local.py  pyproject.toml  run.sh
.github/workflows/: pr-release.yml
src/datalake_mcp_server_client/: __init__.py
src/datalake_mcp_server_client/api/async_query/: get_async_query_results.py  get_async_query_status.py  list_async_query_jobs.py  submit_async_query.py
src/datalake_mcp_server_client/api/delta_lake/: count_delta_table.py  get_database_structure.py  get_table_schema.py  list_database_tables.py  (+4 more)
src/datalake_mcp_server_client/models/: __init__.py  aggregation_spec.py  aggregation_spec_function.py  async_query_status_response.py  async_query_submit_request.py  async_query_submit_response.py  column_spec.py  component_health.py  component_health_status.py  database_list_request.py  database_list_response.py  database_structure_request.py  database_structure_response.py  database_structure_response_structure.py  deep_health_response.py  deep_health_response_status.py  error_response.py  filter_condition.py  filter_condition_operator.py  health_response.py  job_status.py  join_clause.py  join_clause_join_type.py  order_by_spec.py  order_by_spec_direction.py  pagination_info.py  query_engine.py  table_count_request.py  table_count_response.py  table_list_request.py  table_list_response.py  table_query_request.py  table_query_response.py  table_sample_request.py  table_sample_response.py  table_schema_request.py  table_schema_response.py  table_select_request.py  table_select_response.py  table_select_response_data_item.py
(+1 files in other folders)
