[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# The name of your new pip-installable client package
name = "datalake-mcp-server-client"
version = "0.0.1"
description = "A Python client for the Datalake MCP service"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

# Runtime dependencies required by the generated client
dependencies = [
    "httpx >= 0.23.0",
    "pydantic >= 2.0.0, < 3.0.0",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }